[tool.poetry]
name = "driver-logbook"
version = "0.1.0"
description = "Driver Logbook. Fuel and distance tracking"
authors = ["Matthias Maisch <matthias@maisch.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.13.0"
Flask-SQLAlchemy = "^2.4.3"
flask-migrate = "^2.5.3"
flask-login = "^0.5.0"
flask-wtf = "^0.14.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"

[tool.poetry.scripts]
run = "wsgi:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
